@@ -106,6 +106,7 @@ AC_SUBST(SOCKETLIB)
 AC_SUBST(DM_LOGDIR)
 AC_SUBST(DM_CONFDIR)
 AC_SUBST(DM_STATEDIR)
+AC_SUBST(DM_PKGLIBDIR)
 
 AC_PROG_LIBTOOL
 
