@@ -171,6 +171,11 @@ pid_directory         = /var/run
 #
 state_directory       = /var/run
 
+#
+# directory for locating libraries (normally has a sane default compiled-in)
+#
+#library_directory       = /usr/lib/dbmail
+
 [SMTP]
 # In fact, there isn't anything here by default.
                         
